team gap more fix

--- a/style.css
+++ b/style.css
@@ -1105,6 +1105,10 @@ box-shadow:         0px 1px 3px 0px rgba(0, 0, 0, 0.27);
 -o-transition:All 0.6s ease;
 border: 4px solid transparent;
 }
+.team-box .team-player:nth-child(4n+1):nth-last-child(-n+7),
+ .team-box .team-player:nth-child(4n+1):nth-last-child(-n+7) ~ .team-player{
+    margin-bottom: 0px;
+}
 .team-box .team-player.no{
   margin-bottom: 0px;
 }
